# VVAS

./: .buildinfo  .gitmodules  LICENSE  NOTICE  README.md  build-ivas-essential.sh  build_install_vvas.sh  clean_vvas.sh  genindex.html  index.html  install_gst.sh  objects.inv  search.html  searchindex.js  setup.sh  uninstall_vvas.sh
ivas-gst-plugins/: README.md  meson.build  meson_options.txt
ivas-gst-plugins/gst-libs/gst/ivas/: gstinferenceclassification.c  gstinferenceprediction.c  gstinferenceprediction.h  gstivasallocator.c  gstivasallocator.h  gstivasbufferpool.c  gstivasbufferpool.h  gstivascommon.h  gstivaslameta.c  gstivaslameta.h  meson.build
ivas-gst-plugins/gst/metaaffixer/: gstivas_xmetaaffixer.c  gstivas_xmetaaffixer.h  meson.build
ivas-gst-plugins/gst/roigen/: gstivas_xroigen.c  meson.build
ivas-gst-plugins/pkgconfig/: ivas-gst-plugins.pc.in  meson.build
ivas-gst-plugins/sys/: meson.build
ivas-gst-plugins/sys/abrscaler/: gstivas_xabrscaler.c  gstivas_xabrscaler.h  meson.build  multi_scaler_hw.h
ivas-gst-plugins/sys/filter/: gstivas_xfilter.c  meson.build
ivas-gst-plugins/sys/multisrc/: gstivas_xmultisrc.cpp  gstivas_xmultisrc.h  meson.build
vvas-accel-sw-libs/: README.md  meson.build  meson.cross.template  meson_options.txt
vvas-accel-sw-libs/utils/: meson.build  vvas_accel_utils.c  vvas_accel_utils.h
vvas-accel-sw-libs/vvas_xboundingbox/: meson.build
vvas-accel-sw-libs/vvas_xboundingbox/src/: vvas_xboundingbox.cpp  vvas_xboundingbox.hpp
vvas-accel-sw-libs/vvas_xdpuinfer/: meson.build
vvas-accel-sw-libs/vvas_xdpuinfer/src/: vvas_xclassification.cpp  vvas_xclassification.hpp  vvas_xdpuinfer.cpp  vvas_xdpumodels.hpp  vvas_xdpupriv.hpp  vvas_xdputest.cpp  vvas_xfacedetect.cpp  vvas_xfacedetect.hpp  vvas_xplatedetect.cpp  vvas_xplatedetect.hpp  vvas_xplatenum.cpp  vvas_xplatenum.hpp  vvas_xrefinedet.cpp  vvas_xrefinedet.hpp  vvas_xreid.cpp  vvas_xreid.hpp  vvas_xsegmentation.cpp  vvas_xsegmentation.hpp  vvas_xssd.cpp  vvas_xssd.hpp  vvas_xtfssd.cpp  vvas_xtfssd.hpp  vvas_xyolov2.cpp  vvas_xyolov2.hpp  vvas_xyolov3.cpp  vvas_xyolov3.hpp
vvas-accel-sw-libs/vvas_xpreprocessor/: meson.build
vvas-accel-sw-libs/vvas_xpreprocessor/src/: vvas_multi_scaler_hw.h  vvas_xpreprocessor.c
vvas-examples/DC/vvas_xcompositor/: Makefile  README.md  meson.build
vvas-examples/DC/vvas_xcompositor/src/: vvas_xcompositor.c
vvas-gst-plugins/: README.md  meson.build  meson.cross.template  meson_options.txt
vvas-gst-plugins/gst/: meson.build
vvas-gst-plugins/gst-libs/: meson.build
vvas-gst-plugins/gst-libs/gst/: meson.build
vvas-gst-plugins/gst-libs/gst/vvas/: gstinferenceclassification.c  gstinferenceclassification.h  gstinferencemeta.c  gstinferencemeta.h  gstinferenceprediction.c  gstinferenceprediction.h  gstvvasallocator.c  gstvvasallocator.h  gstvvasbufferpool.c  gstvvasbufferpool.h  gstvvascommon.h  gstvvascoreutils.c  gstvvascoreutils.h  gstvvashdrmeta.c  gstvvashdrmeta.h  gstvvasinpinfer.c  gstvvasinpinfer.h  gstvvaslameta.c  gstvvaslameta.h  gstvvasofmeta.c  gstvvasofmeta.h  gstvvasoverlaymeta.c  gstvvasoverlaymeta.h  gstvvassrcidmeta.c  gstvvassrcidmeta.h  meson.build  (+5 more)
vvas-gst-plugins/gst/defunnel/: gstvvas_xdefunnel.c  gstvvas_xdefunnel.h  meson.build
vvas-gst-plugins/gst/funnel/: gstvvas_xfunnel.c  gstvvas_xfunnel.h  meson.build
vvas-gst-plugins/gst/metaaffixer/: gstvvas_xmetaaffixer.c  gstvvas_xmetaaffixer.h  meson.build
vvas-gst-plugins/gst/metaconvert/: gstvvas_xmetaconvert.c  gstvvas_xmetaconvert.h  meson.build  metaconvert_config.json
vvas-gst-plugins/gst/reorderframe/: gstvvas_xreorderframe.c  gstvvas_xreorderframe.h  meson.build
vvas-gst-plugins/gst/roigen/: gstvvas_xroigen.c  gstvvas_xroigen.h  meson.build
vvas-gst-plugins/gst/skipframe/: gstvvas_xskipframe.c  gstvvas_xskipframe.h  meson.build
vvas-gst-plugins/gst/tracker/: gstvvas_xtracker.cpp  gstvvas_xtracker.h  meson.build
vvas-gst-plugins/pkgconfig/: meson.build  vvas-gst-plugins.pc.in
vvas-gst-plugins/sys/: meson.build
vvas-gst-plugins/sys/abrscaler/: gstvvas_xabrscaler.c  gstvvas_xabrscaler.h  meson.build  multi_scaler_hw.h
vvas-gst-plugins/sys/compositor/: README.md  gstvvas_xcompositor.c  gstvvas_xcompositor.h  meson.build  multi_scaler_hw.h
vvas-gst-plugins/sys/filter/: gstvvas_xfilter.c  gstvvas_xfilter.h  meson.build
vvas-gst-plugins/sys/infer/: gstvvas_xinfer.c  gstvvas_xinfer.h  meson.build
vvas-gst-plugins/sys/lookahead/: gstvvas_xlookahead.c  gstvvas_xlookahead.h  krnl_mot_est_hw.h  meson.build
vvas-gst-plugins/sys/multicrop/: gstvvas_xmulticrop.c  gstvvas_xmulticrop.h  meson.build  multi_scaler_hw.h
vvas-gst-plugins/sys/multisrc/: gstvvas_xmultisrc.c  gstvvas_xmultisrc.cpp  gstvvas_xmultisrc.h  meson.build
vvas-gst-plugins/sys/optflow/: gstvvas_xoptflow.c  gstvvas_xoptflow.h  meson.build
vvas-gst-plugins/sys/overlay/: gstvvas_xoverlay.cpp  gstvvas_xoverlay.h  meson.build
vvas-gst-plugins/sys/vcudec/: gstvvas_xvcudec.c  gstvvas_xvcudec.h  meson.build
vvas-gst-plugins/sys/vcuenc/: gstvvas_xvcuenc.c  gstvvas_xvcuenc.h  meson.build
vvas-gst-plugins/sys/videodec/: gstvvas_xvideodec.c  gstvvas_xvideodec.h  meson.build
vvas-utils/: README.md  meson.build
vvas-utils/pkgconfig/: meson.build  vvas-structure.pc.in  vvas-utils.pc.in
vvas-utils/utils/: meson.build  vvas_kernel_utils.c  vvas_structure.c  xrt_utils.c  xrt_utils.cpp  xrt_utils.h
vvas-utils/utils/vvas/: vvas_kernel.h  vvas_structure.h  vvaslogs.h  vvasmeta.h
vvas-xcdr/: LICENSE  README.md  meson.build  setup.sh  xrmd_start.bash
vvas-xcdr/scripts/xrm_commands/: load_multi_u30_xrm_plugins_cmd.json  unload_multi_u30_xrm_plugins_cmd.json
vvas-xrm-plugins/: meson.build
vvas-xrm-plugins/codec-decoder-xrm-plg-u30/: LICENSE  README.md  codec-decoder-xrm-plg-u30.cpp  codec-decoder-xrm-plg-u30.hpp  meson.build
vvas-xrm-plugins/codec-encoder-xrm-plg-u30/: README.md  codec-encoder-xrm-plg-u30.cpp  codec-encoder-xrm-plg-u30.hpp  meson.build
vvas-xrm-plugins/filter-scaler-xrm-plg-u30/: README.md  filter-scaler-xrm-plg-u30.cpp  filter-scaler-xrm-plg-u30.hpp  meson.build
(+526 files in other folders)
