# Feature options for plugins without external deps
option('vvas_xdpuinfer', type : 'feature', value : 'auto')
option('vvas_xboundingbox', type : 'feature', value : 'auto')
option('vvas_xpreprocessor', type : 'feature', value : 'auto')

# vvas_xdpuinfer Model selection
option('YOLOV3', type: 'string', value: '1',
       description: 'Enable disable YOLOV3 models')
option('CLASSIFICATION', type: 'string', value: '1',
       description: 'Enable disable CLASSIFICATION models')
option('FACEDETECT', type: 'string', value: '1',
       description: 'Enable disable FACEDETECT models')
option('REID', type: 'string', value: '1',
       description: 'Enable disable REID models')
option('REFINEDET', type: 'string', value: '1',
       description: 'Enable disable REFINEDET models')
option('SSD', type: 'string', value: '1',
       description: 'Enable disable SSD models')
option('TFSSD', type: 'string', value: '1',
       description: 'Enable disable TFSSD models')
option('YOLOV2', type: 'string', value: '1',
       description: 'Enable disable YOLOV2 models')
option('SEGMENTATION', type: 'string', value: '1',
       description: 'Enable disable SEGMENTATION models')
option('PLATEDETECT', type: 'string', value: '1',
       description: 'Enable disable PLATEDETECT models')
option('PLATENUM', type: 'string', value: '1',
       description: 'Enable disable PLATENUMBER models')
